// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcTooltipDirective > should bind the tooltip directive correctly when value is a string 1`] = `
<div
  id="tooltip-element-3"
>
  Lorem ipsum
</div>
`;

exports[`EcTooltipDirective > should bind the tooltip directive correctly when value is an object 1`] = `
<div
  id="tooltip-element-1"
>
  Lorem ipsum
</div>
`;

exports[`EcTooltipDirective > should bind the tooltip directive correctly when value is false 1`] = `
<div
  id="tooltip-element-4"
>
  Lorem ipsum
</div>
`;

exports[`EcTooltipDirective > should bind the tooltip directive correctly when value only has content 1`] = `
<div
  id="tooltip-element-2"
>
  Lorem ipsum
</div>
`;

exports[`EcTooltipDirective > should bind the tooltip directive correctly with a custom container 1`] = `
<div
  id="tooltip-element-5"
>
  Lorem ipsum
</div>
`;
